# hadess-sensorfw-proxy

./: CMakeLists.txt  iio-sensor-proxy.cpp  orientation.cpp  orientation.h
debian/: control  copyright  rules
sensorfw-core/: CMakeLists.txt  compass_sensor.h  console_log.cpp  console_log.h  dbus_connection_handle.cpp  dbus_connection_handle.h  dbus_event_loop.cpp  dbus_event_loop.h  event_loop.cpp  event_loop.h  event_loop_handler_registration.h  handler_registration.cpp  handler_registration.h  light_sensor.h  log.h  orientation_sensor.h  proximity_sensor.h  scoped_g_error.h  sensorfw_common.cpp  sensorfw_common.h  sensorfw_compass_sensor.cpp  sensorfw_compass_sensor.h  sensorfw_light_sensor.cpp  sensorfw_light_sensor.h  sensorfw_orientation_sensor.cpp  sensorfw_orientation_sensor.h  sensorfw_proximity_sensor.cpp  sensorfw_proximity_sensor.h  socketreader.cpp  socketreader.h
